# avr-modern-rust

./: Cargo.toml  README.md  avr128db28.sh  flash.sh  rust-toolchain.toml  test.sh
.cargo/: config.toml
src/: delay.rs  io.rs  main.rs  serial.rs
